# parallax

./: .flake8  .gitignore  .readthedocs.yaml  FlirTab.py  MainWindow.py  MessageLog.py  NewScaleTab.py  README.md  ScanThread.py  environment.yml  mock_camera.py  pyproject.toml  requirements.txt  run-parallax-wip.py  run-parallax.py  setup.py  zz_notes
.github/workflows/: ci.yml  pytest.yml  tag_and_publish.yml
data/: yolo_config.yaml
docs/: ReadMe.rst  conf.py  index.rst  modules.rst  requirements.txt
docs/_build/: .buildinfo  ReadMe.html  genindex.html  index.html  modules.html  objects.inv  parallax.html  py-modindex.html  search.html  searchindex.js
docs/source/: FAQ.rst  ReadMe.rst  conf.py  index.rst  modules.rst  parallax.rst  parallaxModules.rst  programmersGuide.rst  programmersGuide1.rst  programmersGuide2.rst  userGuide.rst  userGuideCalc.rst  userGuideCalibration.rst  userGuidePtProject.rst  userGuideReticleMetadata.rst  userGuideTrajectory.rst
parallax/: Calibration.py  CalibrationWorker.py  Camera.py  ControlPanel.py  Dialogs.py  Helper.py  MainWindow.py  Model.py  MotorStatus.py  RigidBodyTransformTool.py  ScreenWidget.py  Stage.py  StageDropdown.py  StageManager.py  TriangulationPanel.py  __init__.py  __main__.py  accuracy_test.py  accuracy_testing_tool.py  axis_filter.py  bundle_adjustment.py  bundle_adjustmnet.py  cal_stereo_corners.py  calculator.py  calibration.py  calibration_camera.py  calibration_data_tool.py  calibration_panel.py  calibration_tester.py  calibration_worker.py  camera.py  camera_to_probe_transform_tool.py  checkerboard_tool.py  config.py  config_path.py  control_panel.py  coords_converter.py  coords_transformation.py  curr_bg_cmp_processor.py  curr_prev_cmp_processor.py  (+61 more)
parallax/cameras/: calibration_camera.py  calibration_camera_deprecate.py  calibration_stereo_camera.py  camera.py  camera_base_binding.py  settings.py
parallax/config/: cli.py  config_calibration.py  config_manager.py  config_path.py  dummy_session.yaml  image_processing_config.json  reticle_manager.py  schemas.py  user_setting_manager.py
parallax/control_panel/: control_panel.py  probe_calibration_handler.py  reticle_detect_handler.py  stereo_camera_handler.py  transform_info_handler.py
parallax/handlers/: calculator.py  point_mesh copy.py  point_mesh.py  recording_manager.py  reticle_metadata.py  screen_coords_mapper.py
parallax/probe_calibration/: bundle_adjustment.py  coords_transformation.py  coords_transformation_.py  coords_transformation_deprecate.py  probe_calibration.py  transforms.py
parallax/probe_detection/: curr_bg_cmp_processor.py  curr_prev_cmp_processor.py  opencv_process_worker.py  probe_detect_manager copy.py  probe_detect_manager.py  probe_detect_manager_deprecate.py  probe_detector.py  probe_fine_tip_detector.py  probe_img_processor.py  probe_spin_detector.py  process_worker.py  yolo_process_worker.py
parallax/reticle_detection/: __init__.py  base_manager copy.py  base_manager.py  manager_cnn.py  manager_opencv copy.py  manager_opencv.py  mask_generator.py  reticle_detect_manager.py  reticle_detect_widget.py  reticle_detection.py  reticle_detection_coords_interests.py
parallax/reticle_detection_basic/: reticle_detect_manager.py  reticle_detect_manager_deprecate.py
parallax/reticle_detection_cnn/: reticle_detect_manager.py
parallax/screens/: axis_filter.py  calibration_camera.py  camera.py  camera_base_binding.py  no_filter.py  probe_detect_widget.py  reticle_detect_widget.py  screen_setting.py  screen_setting_.py  screen_widget.py  screen_widget_manager.py
parallax/session/: session_manager.py  session_state.py
parallax/stage_widget/: reticle_detect_handler.py  stage_widget.py
parallax/stages/: stage_controller.py  stage_http_server.py  stage_listener.py  stage_server_ipconfig.py  stage_snapshot.py  stage_ui.py  stage_widget.py
parallax/utils/: coords_converter.py  probe_angles.py  rotations.py  signals.py  transforms.py  utils.py
src/: Calibration.py  CalibrationPanel.py  CalibrationWorker.py  Camera.py  CameraManager.py  CenterDialog.py  ControlPanel.py  Dialogs.py  ExtrinsicsPanel.py  FlirTab.py  Helper.py  IntrinsicsPanel.py  MainWindow.py  MessageLog.py  Model.py  MotorStatus.py  NewScaleTab.py  ProbeTrackingTab.py  ReconstructionPanel.py  RigidBodyTransformTool.py  ScanStageDialog.py  ScreenWidget.py  Stage.py  StageDropdown.py  StageManager.py  State.py  TargetDialog.py  ToggleSwitch.py  TriangulationPanel.py  ZaberTab.py  glue.py  main.py
tests/: camera.py  conftest.py  dialogs.py  helper.py  model.py  rbt_tool.py  screen_widget.py  stage.py  stage_manager.py  test__setting.py  test_axis_filter.py  test_calculator.py  test_calibration_camera.py  test_calibration_stereo_camera.py  test_camera.py  test_camera_base_binding.py  test_cli.py  test_config_path.py  test_coords_converter.py  test_coords_transformation.py  test_curr_bg_cmp_processor.py  test_curr_prev_cmp_processor.py  test_mask_generator.py  test_model.py  test_no_filter.py  test_point_mesh.py  test_probe_calibration.py  test_probe_detect_manager.py  test_probe_detector.py  test_probe_fine_tip_detector.py  test_recording_manager.py  test_reticle_detect_manager.py  test_reticle_detection.py  test_reticle_detection_coords_interests.py  test_reticle_metadata.py  test_rotations.py  test_screen_coords_mapper.py  test_screen_widget.py  test_stage_controller.py  test_stage_listener.py  (+14 more)
tools/: annotate_training_data.py  mock_camera.py
ui/: calc.ui  calc_QGroupBox.ui  calc_QGroupBox_move.ui  calc_move.ui  mainWindow.ui  mainWindow_backup.ui  mainWindow_cam1_cal1.ui  mainWondow_cam1.ui  mainWondow_cam1_cal1.ui  mainWondow_cam2.ui  mainWondow_cam2_arc.ui  mainWondow_cam2_cal1.ui  mainWondow_cam2_cal2.ui  mainWondow_cam3_cal2.ui  mainWondow_cam3_cal3.ui  point_mesh.ui  probe_calib.ui  probe_detection.ui  resources_from_qt.py  reticle_QGroupBox.ui  reticle_calib.ui  reticle_detection.ui  reticle_metadata.ui  settingPopUpMenu.ui  stage_info.ui  stage_server.ui  transM_info.ui
util/: analyze_accutest.py  inspect_calibration.py  inspect_intrinsics.py
(+135 files in other folders)
