[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
 
[project]
name = "parallax-app"
authors = [
  { name="Hanna Lee", email="hanna.lee@alleninstitute.org" },
]
description = "GUI software for photogrammetry-assisted probe targeting in electrophysiology"
license =  {text = "MIT"}
readme = "README.md"
keywords = ["parallax"]
dynamic = ["version"]
requires-python = ">=3.10, <3.11"
classifiers = [
    "Programming Language :: Python :: 3"
]

dependencies = [
    "PyQt6>=6.10.0",
    "pyqtgraph",
    "opencv-python",
    "scipy",
    "pandas",
    "scikit-image",
    "requests",
    "scikit-learn",
    "plotly",
    "PyQt6-WebEngine>=6.10.0",
    "aiohttp",
    "pyyaml",
    "SimpleITK",
    "ultralytics>=8.2.0",
    "lap>=0.5.12",
    "torch>=2.3.0",
    "pydantic>=2",
   ]

[project.scripts]
parallax = "parallax.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["parallax"]
include = ["ui/**"]

[tool.hatch.version]
path = "parallax/__init__.py"

[tool.coverage.run]
omit = [
    "*__init__*"
]
source = ["parallax"]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:", "pragma: no cover"]
fail_under = 30

[tool.ruff]
line-length = 120
exclude = [
    ".git",
    "__pycache__",
    "docs",
    "tests",
]

[tool.ruff.lint]
# Enable Pyflakes (F), pycodestyle (E, W), and isort (I)
select = ["F", "E", "W", "I"]

[tool.codespell]
skip = ".git,*.json,*.log"

[project.optional-dependencies]
linters = [
    'codespell',
    'coverage',
    'ruff',
    'pytest-mock',
    "mypy>=1.11.0",
]

docs = [
    'Sphinx',
    'sphinxcontrib-video',
    'sphinx-jinja',
    'furo',
    'docutils'
]

test = [
    "pytest>=7",
    "pytest-qt>=4.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "opencv-python-headless",
]

[tool]
homepage = "https://github.com/AllenNeuralDynamics/parallax"
repository = "https://github.com/AllenNeuralDynamics/parallax"
documentation = "https://github.com/AllenNeuralDynamics/parallax/wiki"

[tool.pytest.ini_options]
pythonpath = ["parallax", "tests"]
